Make changes to RM dashboard

--- a/rm/index.html
+++ b/rm/index.html
@@ -8,7 +8,33 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Welcome to Relational Manager portal</h1>  
-    <p><a href="../index.html">Go to homepage</a></p>
+    <div class="wrapper">
+        <div class="sidebar">
+            <div class="rm">
+                <img class="photo" src="../images/relational-manager-photo.jfif" alt="rm-image" />
+                <p class="name">Roland, O. O</p>
+                <p class="title">Relational Manager</p>
+            </div>
+            <div class="">
+                <p><a href="">Dashboard</a></p>
+                <p><a href="">Profile</a></p>
+                <p><a href="">Clients</a></p>
+            </div>
+            <div class="logout">
+                <button>Logout</button>
+                <p><a href="../index.html">Go to homepage</a></p>
+            </div>
+        </div>
+        <div class="main">
+            <div>
+                <h1>Investment Portal Dashboard</h1>  
+
+            </div>
+            <div>
+                <button><a href="">All products</a></button>
+                <button><a href="">All ideas</a></button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
