--- a/rm/index.html
+++ b/rm/index.html
@@ -19,7 +19,9 @@
             <div class="">
                 <p><a href="">Dashboard</a></p>
                 <p><a href="">Profile</a></p>
-                <p><a href="">Clients</a></p>
+                <a href="javascript:void(0)" onclick="openTabContent(event, 'clients');">
+                    <div class="tablink " id="tab__clients">Clients</div>
+                </a>
             </div>
             <div class="logout">
                 <button>Logout</button>
@@ -33,14 +35,15 @@
                 <div>Cards</div>
             </div>
             <div class="tabs">
-                <a href="">
-                    <div class="tablink" id="tab__products">All products</div>
+                <a href="javascript:void(0)" onclick="openTabContent(event, 'products');">
+                    <div class="tablink " id="tab__products">All products</div>
                 </a>
-                <a href="">
-                    <div class="tablink" id="tab__ideas">All products</div>
+                <a href="javascript:void(0)" onclick="openTabContent(event, 'ideas');">
+                    <div class="tablink " id="tab__ideas">All ideas</div>
                 </a>
             </div>
-            <div>
+            <!-- content display for all products -->
+            <div id="products" class="tab__content" style="display: none;">
                 <div class="searchbar">
                     <input type="text">
                     <button class="filter">Filter</button>
@@ -53,7 +56,15 @@
                     <button>Previous</button> 1 <button>Next</button>
                 </div>
             </div>
+            <!-- content display for all ideas -->
+            <div id="ideas" class="tab__content" style="display: none;">
+                ALL IDEAS
+            </div>
+            <!-- content display for all registered clients -->
+            <div id="clients" class="tab__content" style="display: none;">All registered clients</div>
         </div>
     </div>
+
+    <script src="./script.js" type="text/javascript"></script>
 </body>
 </html>
