--- a/rm/index.html
+++ b/rm/index.html
@@ -43,14 +43,34 @@
                 </a>
             </div>
             <!-- content display for all products -->
-            <div id="products" class="tab__content" style="display: none;">
+            <div id="products" class="tab__content" style="display: n;">
                 <div class="searchbar">
                     <input type="text">
                     <button class="filter">Filter</button>
                     <button class="sort">Sort</button>
                 </div>
                 <div class="products">
-                    All products display
+                    <div class="card">
+                        <div class="product-title">
+                            <p class="product-symbol">IBM</p>
+                            <p class="product-name">IBM Common Stock</p>
+                        </div>
+                        <div class="product-type">
+                            <p class="product-cat">Basic Securities</p>
+                            <p class="product-group">Equities</p>
+                            <div>
+                                <p>2</p>
+                            </div>
+                        </div>
+                        <div class="product-stock">
+                            <p class="product-stock-title">Stock Exchange:</p>
+                            <p class="product-stock-category">NYSE</p>
+                        </div>
+                        <div class="product-deal">
+                            <p class="product-offer">Offer: 127.57 stocks / 1 USD</p>
+                        </div>
+                        <button class="product-view"  style="cursor: pointer;">View product</button>
+                    </div>
                 </div>
                 <div class="navigation">
                     <button>Previous</button> 1 <button>Next</button>
