--- a/rm/index.html
+++ b/rm/index.html
@@ -69,8 +69,39 @@
                         <div class="product-deal">
                             <p class="product-offer">Offer: 127.57 stocks / 1 USD</p>
                         </div>
+                        <button class="product-view" id="product-view" style="cursor: pointer;">View product</button>
+                    </div>
+                    <div class="card">
+                        <div class="product-title">
+                            <p class="product-symbol">IBM</p>
+                            <p class="product-name">IBM Common Stock</p>
+                        </div>
+                        <div class="product-type">
+                            <p class="product-cat">Basic Securities</p>
+                            <p class="product-group">Equities</p>
+                            <div>
+                                <p>2</p>
+                            </div>
+                        </div>
+                        <div class="product-stock">
+                            <p class="product-stock-title">Stock Exchange:</p>
+                            <p class="product-stock-category">NYSE</p>
+                        </div>
+                        <div class="product-deal">
+                            <p class="product-offer">Offer: 127.57 stocks / 1 USD</p>
+                        </div>
                         <button class="product-view"  style="cursor: pointer;">View product</button>
                     </div>
+                    <!-- View product page -->
+                    <div id="myModal" class="modal">
+
+                        <!-- Modal content -->
+                        <div class="modal-content">
+                          <span class="close">&times;</span>
+                          <p>Some text in the Modal..</p>
+                        </div>
+                      
+                      </div>
                 </div>
                 <div class="navigation">
                     <button>Previous</button> 1 <button>Next</button>
