--- a/rm/index.html
+++ b/rm/index.html
@@ -98,7 +98,7 @@
                         <!-- Modal content -->
                         <div class="modal-content">
                           <span class="close">&times;</span>
-                          <p>Some text in the Modal..</p>
+                          <p>See comprehensive details about each product selected</p>
                         </div>
                       
                       </div>
