--- a/clients/Dashboard.html
+++ b/clients/Dashboard.html
@@ -8,7 +8,7 @@
     </title>
 </head>
 <body>
-    <section class="header"><h1>This is the header</h1>
+    <section class="header"><h1>This is the header...</h1>
         <div class="w3-light-grey">
             <div class="w3-container" style="width:50%">50%</div>
           </div>
