Fix navigation on client page

--- a/clients/index.html
+++ b/clients/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Welcome to Clients portal</h1>
+    <h1><a href="./Login/index.html">Go to Clients portal</a></h1>
     <p><a href="../index.html">Go to homepage</a></p>
 </body>
 </html>
