--- a/clients/Dashboard.html
+++ b/clients/Dashboard.html
@@ -13,7 +13,10 @@
             <div class="w3-container" style="width:50%">50%</div>
           </div>
     </section>
-    <section class="left"><h1>This is left section</h1></section>
+    <section class="left">
+        <h1>This is left section</h1>
+        <a href="./index.html">Go back to clientwelcome page</a>
+    </section>
     <section class="right"><h1>This is the right</h1></section>
     
 </body>
