--- a/clients/Login/index.html
+++ b/clients/Login/index.html
@@ -33,7 +33,7 @@
                 <label><input type="checkbox" checked="checked" name="remember"> Remember</label>
                 <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
                 <div class="submit">
-                    <button type="submit" class="signupbtn"><b>Sign Up</b></button>
+                    <button type="submit" class="signupbtn"><b><a href="../Dashboard.html">Sign Up</a></b></button>
                   </div>
                     </div>
                     </div>
