--- a/rm/index.html
+++ b/rm/index.html
@@ -109,10 +109,69 @@
             </div>
             <!-- content display for all ideas -->
             <div id="ideas" class="tab__content" style="display: none;">
-                ALL IDEAS
+                <table>
+                    <tr>
+                        <th>Date Created</th>
+                        <th>Instrument Name</th>
+                        <th>Asset Type</th>
+                        <th>Offer</th>
+                        <th>Closing Date</th>
+                        <th>Risk level</th>
+                        <th>Status</th>
+                        <th>Action</th>
+                    </tr>
+                    <tr>
+                        <td>2/2/2023</td>
+                        <td>Amazon.com, Inc</td>
+                        <td>Equities</td>
+                        <td>1 USD per 127.72 stocks</td>
+                        <td>7/9/2023</td>
+                        <td>1</td>
+                        <td>Pending</td>
+                        <td><button>View Idea</button></td>
+                    </tr>
+                    <tr>
+                        <td>3/2/2023</td>
+                        <td>Intellia Common Stock</td>
+                        <td>Equities</td>
+                        <td>1 USD per 57.53 stocks</td>
+                        <td>9/9/2023</td>
+                        <td>3</td>
+                        <td>Created</td>
+                        <td><button>View Idea</button></td>
+                    </tr>
+                    
+                </table>
             </div>
             <!-- content display for all registered clients -->
-            <div id="clients" class="tab__content" style="display: none;">All registered clients</div>
+            <div id="clients" class="tab__content" style="display: none;">
+                <table>
+                    <tr>
+                        <th>S/n</th>
+                        <th>Firstname</th>
+                        <th>Lastname</th>
+                        <th>Contact</th>
+                        <th>Country</th>
+                        <th>Action</th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Richard</td>
+                        <td>Stones</td>
+                        <td>richard@gmail.com</td>
+                        <td>USA</td>
+                        <td><button>View</button></td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Jackie</td>
+                        <td>Mary</td>
+                        <td>mary@outlook.com</td>
+                        <td>Brazil</td>
+                        <td><button>View</button></td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
 
