--- a/rm/index.html
+++ b/rm/index.html
@@ -19,9 +19,6 @@
             <div class="">
                 <p><a href="">Dashboard</a></p>
                 <p><a href="">Profile</a></p>
-                <a href="javascript:void(0)" onclick="openTabContent(event, 'clients');">
-                    <div class="tablink " id="tab__clients">Clients</div>
-                </a>
             </div>
             <div class="logout">
                 <button>Logout</button>
@@ -40,6 +37,9 @@
                 </a>
                 <a href="javascript:void(0)" onclick="openTabContent(event, 'ideas');">
                     <div class="tablink " id="tab__ideas">All ideas</div>
+                </a>
+                <a href="javascript:void(0)" onclick="openTabContent(event, 'clients');">
+                    <div class="tablink " id="tab__clients">Clients</div>
                 </a>
             </div>
             <!-- content display for all products -->
@@ -98,7 +98,49 @@
                         <!-- Modal content -->
                         <div class="modal-content">
                           <span class="close">&times;</span>
-                          <p>See comprehensive details about each product selected</p>
+                          <div>
+                            <div>
+                                <p>IBM</p>
+                                <p>IBM Common Stock</p>
+                            </div>
+                            <div>
+                                <button>Select product category</button>
+                                <button>Select product class</button>
+                                <button>Select product group</button>
+                                <button>Select product type</button>
+                            </div>
+                          </div>
+                          <div>
+                            <div>
+                                <p>Stock Exchange: NYSE</p>
+                                <p>Issuer: International Business Machines Corporation</p>
+                                <div>
+                                    <p>ISIN: N/A</p>
+                                    <p>Ticker: IBM</p>
+                                </div>
+                            </div>
+                            <div>
+                                <p>1</p>
+                                <p>Suitable for very conservative investors</p>
+                            </div>
+                          </div>
+                          <div>
+                            <div>
+                                <div>
+                                    <button>Select Industry</button>
+                                    <button>Select Sector</button>
+                                </div>
+                                <div>
+                                    <button>Select Region</button>
+                                    <button>Select Sub-region</button>
+                                    <button>Select Country</button>
+                                </div>
+                              </div>
+                              <div>
+                                <button>View Clients (2)</button>
+                                <button>Recommend to Clients</button>
+                              </div>
+                          </div>
                         </div>
                       
                       </div>
@@ -176,5 +218,6 @@
     </div>
 
     <script src="./script.js" type="text/javascript"></script>
+    <script src="./components.js" type="text/javascript"></script>
 </body>
 </html>
