Style expanded product page

--- a/rm/index.html
+++ b/rm/index.html
@@ -96,50 +96,54 @@
                     <div id="myModal" class="modal">
 
                         <!-- Modal content -->
-                        <div class="modal-content">
+                        <div class="modal-content product-details">
                           <span class="close">&times;</span>
-                          <div>
-                            <div>
-                                <p>IBM</p>
-                                <p>IBM Common Stock</p>
+                          <div class="product-details-r1" style="display: flex;">
+                            <div class="product-details-tag" style="display: flex;">
+                                <div class="product-details-logo"><p >IBM</p></div>
+                                <p class="product-details-name">IBM Common Stock</p>
                             </div>
-                            <div>
-                                <button>Select product category</button>
-                                <button>Select product class</button>
-                                <button>Select product group</button>
-                                <button>Select product type</button>
+                            <div class="product-details-preferences">
+                                <button class="product-preferences">Select product category</button>
+                                <button class="product-preferences">Select product class</button>
+                                <button class="product-preferences">Select product group</button>
+                                <button class="product-preferences">Select product type</button>
+                            </div>
+                            <div class="product-details-offer">
+                                <p>Offer: <span id="stock-unit">127.57</span> stocks per <span id="stock-price">1</span> <span id="stock-currency">USD</span></p>
                             </div>
                           </div>
-                          <div>
-                            <div>
-                                <p>Stock Exchange: NYSE</p>
-                                <p>Issuer: International Business Machines Corporation</p>
-                                <div>
-                                    <p>ISIN: N/A</p>
-                                    <p>Ticker: IBM</p>
+                          <div class="product-details-r2 " style="display: flex;">
+                            <div class="product-details-stock-info" style="border: 1px solid black;">
+                                <p class="product-details-stock">Stock Exchange: <span id="stock">NYSE</span></p>
+                                <p class="product-details-issuer">Issuer: <span id="issuer">International Business Machines Corporation</span></p>
+                                <div class="product-details-codes">
+                                    <p>ISIN: <span id="isin">N/A</span></p>
+                                    <p>Ticker: <span id="ticker">IBM</span></p>
                                 </div>
                             </div>
-                            <div>
-                                <p>1</p>
-                                <p>Suitable for very conservative investors</p>
+                            <div class="product-details-risk" style="display: flex;">
+                                <p id="risk-rating">1</p>
+                                <p id="risk-brief">Suitable for very conservative investors</p>
+                                <!-- <p id="risk-description">Investors who hope to experience minimal fluctuations in portfolio value over a rolling one year period and are generally only willing to buy investments that are priced frequently and have a high certainty of being able to sell quickly (less than a week) at a price close to the recently observed market value.</p> -->
                             </div>
                           </div>
-                          <div>
-                            <div>
-                                <div>
+                          <div class="product-details-r3" style="display: flex;">
+                            <div class="product-details-preferences-2">
+                                <div class="product-details-place" style="display: flex;">
                                     <button>Select Industry</button>
                                     <button>Select Sector</button>
                                 </div>
-                                <div>
+                                <div class="product-details-place" style="display: flex;">
                                     <button>Select Region</button>
                                     <button>Select Sub-region</button>
                                     <button>Select Country</button>
                                 </div>
-                              </div>
-                              <div>
-                                <button>View Clients (2)</button>
-                                <button>Recommend to Clients</button>
-                              </div>
+                            </div>
+                            <div class="product-details-recom" style="display: flex;">
+                                <button id="filter-client">View Clients (2)</button>
+                                <button id="rec-to-client">Recommend to Clients</button>
+                            </div>
                           </div>
                         </div>
                       
