--- a/rm/index.html
+++ b/rm/index.html
@@ -71,7 +71,11 @@
                         </div>
                         <button class="product-view" id="product-view" style="cursor: pointer;">View product</button>
                     </div>
-                    <div class="card">
+                    <created-investment-cards></created-investment-cards>
+                    <created-investment-cards></created-investment-cards>
+                    <created-investment-cards></created-investment-cards>
+                    <created-investment-cards></created-investment-cards>
+                    <!-- <div class="card">
                         <div class="product-title">
                             <p class="product-symbol">IBM</p>
                             <p class="product-name">IBM Common Stock</p>
@@ -91,7 +95,7 @@
                             <p class="product-offer">Offer: 127.57 stocks / 1 USD</p>
                         </div>
                         <button class="product-view"  style="cursor: pointer;">View product</button>
-                    </div>
+                    </div> -->
                     <!-- View product page -->
                     <div id="myModal" class="modal">
 
@@ -123,10 +127,11 @@
                                       </div>
                                     </div>
                                 </div>
+                                <!-- <basic-security-products></basic-security-products> -->
                                 <div class="multi-select">
                                     <button class="toggle-dp">Derivatives Products</button>
                                     <div class="dropdown-dp">
-                                      <div class="options-dp">
+                                      <div class="options-dp options">
                                         <label><input type="checkbox" value="Security Derivatives">Security Derivatives</label>
                                         <label><input type="checkbox" value="FX and Money Market">FX and Money Market</label>
                                         <label><input type="checkbox" value="Credit Derivatives">Credit Derivatives</label>
@@ -248,6 +253,7 @@
     </div>
 
     <script src="./script.js" type="text/javascript"></script>
+    <script src="./products.js" type="text/javascript"></script>
     <!-- <script src="./components.js" type="text/javascript"></script> -->
 </body>
 </html>
