--- a/rm/index.html
+++ b/rm/index.html
@@ -205,7 +205,7 @@
                         <td>7/9/2023</td>
                         <td>1</td>
                         <td>Pending</td>
-                        <td><button>View Idea</button></td>
+                        <td><button>Create Idea</button></td>
                     </tr>
                     <tr>
                         <td>3/2/2023</td>
@@ -215,7 +215,7 @@
                         <td>9/9/2023</td>
                         <td>3</td>
                         <td>Created</td>
-                        <td><button>View Idea</button></td>
+                        <td><button>Create Idea</button></td>
                     </tr>
                     
                 </table>
