--- a/rm/index.html
+++ b/rm/index.html
@@ -195,6 +195,11 @@
         </div>
     </div>
 
+
+
+
+
+    <!-- Javascript files -->
     <script src="./script.js" type="text/javascript"></script>
     <script src="./products.js" type="text/javascript"></script>
     <script src="./ideas/ideas.js" type="text/javascript"></script>
